tests/interpreter/errors/index_out_of_bounds.mochi
let xs = [1]
print(xs[2])
